Fixed footer and offers display on smaller screens.

--- a/app/assets/styles/modules/_footer.css
+++ b/app/assets/styles/modules/_footer.css
@@ -5,11 +5,33 @@
   padding-bottom: 64px;
 
   &__main-text {
-    grid-column: 2 / 6;
-    grid-row: 1 / 2;
+    grid-column: 1/5;
+    grid-row: 1/2;
+    margin-bottom: 32px;
 
+    @mixin min600px {
+      grid-column: 2/6;
+    }
+
+    @mixin min768px {
+      grid-column: 2/8;
+    }
+
+    @mixin min1024px {
+      grid-column: 2/6;
+    }
+
+    @mixin min1800px {
+      grid-column: 2 / 6;
+      grid-row: 1 / 2;
+    }
+    
     &__heading {
-      font-size: 90px;
+      font-size: 64px;
+
+      @mixin min1800px {
+        font-size: 90px;
+      }
     }
 
     &__paragraph {
@@ -21,12 +43,24 @@
   }
 
   &__buttons-list {
-    grid-column: 2 / 6;
+    grid-column: 1/5;
     grid-row: 2 / 3;
     display: flex;
     flex-wrap: wrap;
     gap: 24px;
     margin-bottom: 0;
+
+    @mixin min600px {
+      grid-column: 2 / 6;
+    }
+
+    @mixin min768px {
+      grid-column: 2/8;
+    }
+
+    @mixin min1024px {
+      grid-column: 2/6;
+    }
 
     a {
       justify-content: center;
@@ -39,14 +73,33 @@
   }
 
   &__address {
-    grid-column: 7 / 9;
-    grid-row: 1 / 2;
+    grid-column: 1/3;
+    grid-row: 3/4;
     font-style: normal;
-    opacity: .5;
+
+    @mixin min600px {
+      grid-column: 2/4;
+    }
+
+    @mixin min768px {
+      grid-column: 2/5;
+    }
+
+    @mixin min1360px {
+      grid-column: 7/10;
+      grid-row: 1/3;
+    }
+
+    @mixin min1800px {
+      grid-column: 7 / 9;
+      grid-row: 1 / 2;
+      opacity: .5;
+    }
 
     p {
       font-weight: 500;
       margin-bottom: 32px;
+      opacity: .5;
     }
 
     &__details {
@@ -60,14 +113,33 @@
   }
 
   &__social-media {
-    grid-column: 7 / 10;
-    grid-row: 2 / 3;
-    align-self: end;
+    grid-column: 1/3;
+    grid-row: 4/5;
+
+    @mixin min600px {
+      grid-column: 2/4;
+    }
+
+    @mixin min1360px {
+      grid-column: 2/4;
+      grid-row: 3/4;
+      align-self: end;
+    }
+
+    @mixin min1800px {
+      grid-column: 7 / 10;
+      grid-row: 2 / 3;
+    }
 
     p {
+      display: none;
       opacity: .5;
       font-weight: 500;
       margin-bottom: 32px;
+
+      @mixin min1360px {
+        display: block;
+      }
     }
 
     &__icons-list {
@@ -79,11 +151,29 @@
   }
 
   &__page-nav {
-    grid-column: 10 / 12;
-    grid-row: 1 / 3;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    grid-column: 3/5;
+    grid-row: 3/5;
+
+    @mixin min600px {
+      grid-column: 4/6;
+    }
+
+    @mixin min768px {
+      grid-column: 5/8;
+    }
+
+    @mixin min1360px {
+      grid-column: 7/9;
+      grid-row: 2/4;
+    }
+
+    @mixin min1800px {
+      grid-column: 10 / 12;
+      grid-row: 1 / 3;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
 
     p {
       opacity: .5;
@@ -103,27 +193,66 @@
         padding-left: 0;
       }
     }
-  } 
-
-  &__copywright {
-    grid-column: 2 / 6;
-    grid-row: 3 / 4;
-    font-size: 12px;
-    align-self: end;
-    opacity: .5;
   }
 
-  &__author {
-    grid-column: 10 / 12;
-    grid-row: 3 / 4;
+  &__motyl {
+    grid-column: 1/5;
+    grid-row: 5/6;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 18px;
+    margin-bottom: 18px;
+    width: 42px;
+    height: 42px;
+
+    @mixin min600px {
+      grid-column: 2/6;
+    }
+
+    @mixin min768px {
+      grid-column: 2/8;
+    }
+
+    @mixin min1360px {
+      grid-column: 2/10;
+      grid-row: 4/5;
+    }
+
+    @mixin min1800px {
+      grid-column: 2/12;
+    }
+  }
+
+  &__copywright {
+    grid-column: 1/5;
+    grid-row: 6/7;
     font-size: 12px;
-    align-self: end;
     opacity: .5;
-    
-    img {
-      position: relative;
-      top: 16px;
-      width: 80px;
+    text-align: center;
+    max-width: 240px;
+    margin-left: auto;
+    margin-right: auto;
+
+    @mixin min600px {
+      grid-column: 2/6;
+      max-width: none;
+    }
+
+    @mixin min768px {
+      grid-column: 2/8;
+    }
+
+    @mixin min1360px {
+      grid-column: 2/10;
+      grid-row: 5/6;
+    }
+
+    @mixin min1800px {
+      grid-column: 2 / 6;
+      grid-row: 3 / 4;
+      align-self: end;
+      text-align: left;
+      margin-left: 0;
     }
   }
 }
